# greenwavecoin

./: .env.example  .gitignore  .solhint.json  BACKEND_COORDINATOR_SPEC.md  COMPUTE_REWARD_MODEL.md  DEPLOYMENT.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_READINESS.md  EPOCH_REWARD_SETUP.md  FAH_IMPLEMENTATION.md  FINAL_REVIEW.md  FOLDING_INTEGRATION.md  INSTALLER_GUIDE.md  LAUNCH_READY.md  LICENSE  MAINNET_READY_REPORT.md  MUMBAI_DEPLOY.md  NOTICE  PRE_DEPLOYMENT_GUIDE.md  PROJECT_INVENTORY.md  QUICKSTART.md  QUICK_BUILD.md  QUICK_REFERENCE.md  README.md  REWARD_BRIDGE_DESIGN.md  SECURITY.md  WALLET_BACKUP.txt  docker-compose.yml  ecosystem.config.js  ecosystem.config.json  hardhat.config.ts  package-lock.json  package.json  restart-servers.ps1  start-dev.bat  stub-backend.js  tsconfig.json
.github/: copilot-instructions.md
.openzeppelin/: polygon.json  sepolia.json  unknown-80002.json
ai-worker/: GreenWaveCoin-Worker.spec  README.md  build_windows.bat  gwc_worker.spec  gwc_worker_gui.py  requirements.txt  task_generator.py  worker.py
audits/: AUDIT_DECISION.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  check-db.js  clear-anonymous.js  jest.config.js  package-lock.json  package.json
backups/: GreenWaveCoin_working_20251107.sol  GreenWaveCoin_working_20251107_full.sol
compute-worker/: .env.example  Cargo.toml  README.md
compute-worker/src/: main.rs
contracts/: GreenWaveCoin.sol  GreenWaveCoinV2.sol  GreenWaveStaking.sol  GreenWaveTimelock.sol  IStakingRequirement.sol  RewardEscrow.sol  RewardEscrowV2.sol  SimpleStaking.sol
scripts/: db.ts  (+39 more)
(+127 files in other folders)
